implement tableview in prev workout vc

--- a/levo/levo/Base.lproj/Main.storyboard
+++ b/levo/levo/Base.lproj/Main.storyboard
@@ -515,36 +515,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="vlH-FZ-BvT">
-                                <rect key="frame" x="40" y="244" width="334" height="91"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bep-QF-Y6s">
-                                        <rect key="frame" x="292.5" y="0.0" width="41.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ot-eK-FkS">
-                                        <rect key="frame" x="292.5" y="70.5" width="41.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZX8-Wo-S18">
+                                <rect key="frame" x="0.0" y="94" width="414" height="718"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="g38-cQ-PAz" id="v9C-Gs-Cg0"/>
+                                    <outlet property="delegate" destination="g38-cQ-PAz" id="p10-Uj-rDm"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BLH-vf-Pw4">
+                                <rect key="frame" x="20" y="64" width="19.5" height="22"/>
+                                <state key="normal" image="arrow.backward" catalog="system"/>
+                                <connections>
+                                    <action selector="didTapBackBtn" destination="XTH-03-SjA" eventType="touchUpInside" id="i0R-jd-2xX"/>
+                                    <action selector="goBack" destination="g38-cQ-PAz" eventType="touchUpInside" id="fde-XZ-Tdo"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wnC-H0-Fhv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="wnC-H0-Fhv" firstAttribute="trailing" secondItem="vlH-FZ-BvT" secondAttribute="trailing" constant="40" id="GFA-ex-nUP"/>
-                            <constraint firstItem="vlH-FZ-BvT" firstAttribute="leading" secondItem="wnC-H0-Fhv" secondAttribute="leading" constant="40" id="U4v-Eq-qDW"/>
-                            <constraint firstItem="vlH-FZ-BvT" firstAttribute="top" secondItem="wnC-H0-Fhv" secondAttribute="top" constant="200" id="cKn-z7-g1t"/>
-                            <constraint firstItem="vlH-FZ-BvT" firstAttribute="centerX" secondItem="1PU-pp-5VQ" secondAttribute="centerX" id="i9f-UO-vs3"/>
+                            <constraint firstItem="ZX8-Wo-S18" firstAttribute="leading" secondItem="wnC-H0-Fhv" secondAttribute="leading" id="30M-FH-uZs"/>
+                            <constraint firstItem="wnC-H0-Fhv" firstAttribute="bottom" secondItem="ZX8-Wo-S18" secondAttribute="bottom" constant="50" id="EeZ-pj-vFf"/>
+                            <constraint firstItem="wnC-H0-Fhv" firstAttribute="trailing" secondItem="ZX8-Wo-S18" secondAttribute="trailing" id="PBr-zk-kjo"/>
+                            <constraint firstItem="BLH-vf-Pw4" firstAttribute="leading" secondItem="wnC-H0-Fhv" secondAttribute="leading" constant="20" id="SCI-y0-m3H"/>
+                            <constraint firstItem="BLH-vf-Pw4" firstAttribute="top" secondItem="wnC-H0-Fhv" secondAttribute="top" constant="20" id="WXH-3T-9ZU"/>
+                            <constraint firstItem="ZX8-Wo-S18" firstAttribute="top" secondItem="wnC-H0-Fhv" secondAttribute="top" constant="50" id="ZMO-yL-Bol"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="testLbl" destination="bep-QF-Y6s" id="rcz-KK-pyR"/>
-                        <outlet property="testLbl1" destination="9Ot-eK-FkS" id="bg1-OJ-jQh"/>
+                        <outlet property="backBtn" destination="BLH-vf-Pw4" id="CjD-MU-bhB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="340-i6-1p3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
